--- a/path/to/map/index.html
+++ b/path/to/map/index.html
@@ -86,7 +86,7 @@
           map: map
         });
 
-        var info = '<div style="font-size:18px;font-weight:bold;margin-bottom:10px;">' + data['名称'] + '</div>';
+        var info = '<div style="font-size:18px;font-weight:bold;margin-bottom:10px;">' + data['時間'] + '</div>';
         infoWindow[i] = new google.maps.InfoWindow({
           content: info
         });
