--- a/path/to/map/index.html
+++ b/path/to/map/index.html
@@ -32,7 +32,7 @@
     <div id="map"></div>
     <td><div id="sidebar"></div></td>
     <script src="constants.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=[AIzaSyBSKSbBMF-rQ4VtKU9kSHs7Nwt_38tpt0E]&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=AIzaSyBSKSbBMF-rQ4VtKU9kSHs7Nwt_38tpt0E&callback=initMap" async defer></script>
     <script>
       var map;
       var marker = [];
